--- a/etc/dough/dough.conf.sample
+++ b/etc/dough/dough.conf.sample
@@ -1,13 +1,10 @@
-[MySQL]
-host: localhost
-user: someuser
-passwd: somepassword
-db: someschema
-
-[Dough]
-handler_host: 127.0.0.1
-handler_port: 5557
-broadcast_host: 127.0.0.1
-broadcast_port: 5558
-feedback_host: 127.0.0.1
-feedback_port: 5559
+[DEFAULT]
+sql_connection=mysql://someuser:somepasswd@localhost/dough
+api_listen=localhost
+api_listen_port=5557
+farmer_listen=localhost
+farmer_listen_port=5558
+keystone_username=someusername
+keystone_password=somepassword
+keystone_tenant_name=sometenant
+keystone_auth_url=someurl
