Fix dough conf file
Corporate flags added

--- a/etc/dough/dough.conf.sample
+++ b/etc/dough/dough.conf.sample
@@ -8,3 +8,9 @@ keystone_username=someusername
 keystone_password=somepassword
 keystone_tenant_name=sometenant
 keystone_auth_url=someurl
+corporate_user_key=somekey
+corporate_type=sometype
+corporate_service=someservice
+corporate_action=someaction
+corporate_product=someproduct
+corporate_url=localhost
