Fix config file prototype
Add new flags and options

--- a/etc/dough/dough.conf.sample
+++ b/etc/dough/dough.conf.sample
@@ -8,9 +8,12 @@ keystone_username=someusername
 keystone_password=somepassword
 keystone_tenant_name=sometenant
 keystone_auth_url=someurl
-corporate_user_key=somekey
-corporate_type=sometype
-corporate_service=someservice
-corporate_action=someaction
-corporate_product=someproduct
-corporate_url=localhost
+demux_host=localhost
+demux_port=5559
+kanyun_host=localhost
+kanyun_port=5560
+mysql_host=localhost
+mysql_port=3306
+mysql_user=nova
+mysql_pwd=opensesame
+nova_schema=nova
